--- a/E2E_DocsBranch_Dynamic/TOC.yml
+++ b/E2E_DocsBranch_Dynamic/TOC.yml
@@ -1,6 +1,6 @@
 - name: invalidMsProd
   href: invalidMsProd.md
-  items：
+  items:
   - name: invalidMsService
     href: invalidMsService.md
   - name: invalidMsSubservice
