--- a/E2E_DocsBranch_Dynamic/TOC.yml
+++ b/E2E_DocsBranch_Dynamic/TOC.yml
@@ -5,8 +5,8 @@
     href: invalidMsService.md
   - name: invalidMsSubservice
     href: invalidMsSubservice.md
-  - href: invalidMsTechnology
-    name: invalidMsTechnology.md
+  - name: invalidMsTechnology
+    href: invalidMsTechnology.md
   - name: ms-prod-and-service
     href: ms-prod-and-service.md
   - name: ms-prod-missing
@@ -19,5 +19,5 @@
     href: notEmptyTypeTechnology.md
   - name: notMatchMsServiceSubService
     href: notMatchMsServiceSubService.md
-  - href: notMatchProdTech
-    name: notMatchProdTech.md
+  - name: notMatchProdTech
+    href: notMatchProdTech.md
